@@ -128,14 +128,54 @@
     </repositories>
 	
 	
-	 <build>
-    	<plugins>
-    		<plugin>
-		        <groupId>org.sonarsource.scanner.maven</groupId>
-		        <artifactId>sonar-maven-plugin</artifactId>
-		        <version>3.7.0.1746</version>
-		    </plugin>
-    	</plugins>
-    </build>
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.7.0.1746</version>
+        </plugin>
+        <plugin>
+            <groupId>com.diffplug.spotless</groupId>
+            <artifactId>spotless-maven-plugin</artifactId>
+            <version>2.17.5</version>
+           
+            <dependencies>
+                <dependency>
+                    <groupId>com.google.googlejavaformat</groupId>
+                    <artifactId>google-java-format</artifactId>
+                    <version>1.10.0</version>
+                </dependency>
+            </dependencies>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>apply</goal>
+                    </goals>
+                    <configuration>
+                        <spotless>
+                            <java>
+                                <googleJavaFormat />
+                            </java>
+                        </spotless>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+                <spotless>
+                    <java>
+                        <googleJavaFormat />
+                    </java>
+                </spotless>
+                <mavenOpts>
+                    --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                    --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                    --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                    --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                </mavenOpts>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
     
 </project>
